- fixed bug on multi-line description save failure - implemented dark mode toggle switch - changed font and added more styling

--- a/src/public/styles/notes-list.css
+++ b/src/public/styles/notes-list.css
@@ -1,3 +1,20 @@
+:root {
+  --background: #eee;
+  --color: #444;
+}
+
+.dark-theme {
+  --background: #444;
+  --color: #fff;
+}
+
+body {
+  font-family: "Comic Sans MS", sans-serif;
+  color: var(--color);
+  background: var(--background);
+  transition: background 0.3s ease, color 1s ease;
+}
+
 .notes-list ul {
   padding: 0;
 }
@@ -10,7 +27,6 @@
 }
 
 .notes-list ul li {
-  background: #ccc;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -24,7 +40,75 @@
 
 .note-child-done {
   /* background: #9595ef; */
-  flex: 1 1 20%;
+  flex: 1 1 5%;
+}
+
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #ccc;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #7abef5;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .note-child-title-desc {
@@ -34,73 +118,50 @@
 
 .note-child-title-desc textarea {
   resize: none;
+  height: 75px;
+  margin-top: 0;
+  border-radius: 5px;
 }
 
-.note-child-edit {
-  /* background: #d78888; */
-  flex: 1 1 20%;
-}
+/*.note-child-edit-delete {*/
+/*  !* background: #d78888; *!*/
+/*  flex: 1 1 10%;*/
+/*}*/
 
-.edit-button,
-.delete-button {
-  width: 50%;
-  padding: 0.25rem 0.5rem;
-  cursor: pointer;
-  color: white;
-  outline: none;
-  margin: 0.5rem 0;
-}
-
-.create-button {
-  padding: 0.25rem 0.5rem;
-  background: #04aa6d;
-  color: white;
-  border: 2px solid #04aa6d;
+.btn {
+  background-color: #1e90ffff;
+  border: none;
+  color: #fff;
+  padding: 10px 14px;
+  font-size: 16px;
   cursor: pointer;
   border-radius: 5px;
 }
 
-.completed-button {
-  padding: 0.25rem 0.5rem;
-  background: #09bfb9ce;
-  color: white;
-  border: 2px solid #09bfb9ce;
-  cursor: pointer;
-  border-radius: 5px;
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: #4169e1ff;
 }
 
 .fas {
   pointer-events: none;
 }
 
-.edit-button {
-  background-color: #4c92ff;
-  border: 2px solid #4c92ff;
-  border-radius: 5px;
+.create-button {
+  background: #04aa6d;
+}
+
+/* Darker background on mouse-over */
+.create-button:hover {
+  background-color: #038454;
 }
 
 .delete-button {
   background-color: #ff5a85;
-  border: 2px solid #ff5a85;
-  border-radius: 5px;
-}
-
-.edit-button:focus,
-.edit-button:active,
-.edit-button:hover {
-  background-color: #0366ff;
-  border: 2px solid #0366ff;
 }
 
 .delete-button:hover {
-  background-color: #ff89a3;
-  border: 2px solid #ff89a3;
-}
-
-.delete-button:focus,
-.delete-button:active {
   background-color: #ff2559;
-  border: 2px solid #ff2559;
 }
 
 .notes-list .title-desc {
@@ -127,7 +188,7 @@
 }
 
 .title-desc header h4 {
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Verdana", sans-serif;
   font-weight: bold;
   color: red;
 }
@@ -139,4 +200,19 @@
 
 .control * {
   margin: 0 5px;
+}
+
+#theme-button {
+  background-color: transparent; /* Green */
+  border: none;
+  color: yellow;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+#theme-button:hover {
+  background-color: #ccc;
 }
